toout_a_la_NORm_09101547

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: apintus <apintus@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/11/14 12:20:45 by apintus           #+#    #+#              #
-#    Updated: 2024/04/23 16:42:51 by apintus          ###   ########.fr        #
+#    Updated: 2024/10/09 15:22:15 by apintus          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -65,6 +65,7 @@ SRCS =	ft_isalpha.c\
 		ft_strcmp.c\
 		ft_strncpy.c\
 		ft_realloc.c\
+		ft_strcpy.c\
 
 BONUS =	ft_lstnew.c\
 		ft_lstadd_front.c\
